<resources>

    <!--MainActivity-->
    <string name="app_name">Weather</string>
    <string name="text_city">Enter your city:</string>
    <string name="pressure">Pressure</string>
    <string name="speed_weather">Speed weather</string>
    <string name="buttonSearch">Search</string>

    <!--ActivityWeather-->
    <string name="text_city_w">City: </string>
    <string name="text_city_g">Degrees</string>
    <string name="text_city_p">Pressure</string>
    <string name="text_city_h">Humidity</string>
    <string name="text_city_s">Speed weather</string>
    <string name="buttonReload">Reload</string>
    <string name="buttonWorld">World Weather</string>
    <string name="city_name_search">Название города..</string>

</resources>